--- a/page2.html
+++ b/page2.html
@@ -491,7 +491,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
                 <!-- <form action="" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"> -->
-                    <form action="https://formsubmit.co/bangueromiguel08@gmail.com" method="POST" class="mbr-form form-with-styler">
+                    <form action="https://formspree.io/f/meokdlwa" method="POST" class="mbr-form form-with-styler">
                     <input type="text" name="_honey" style="display:none">
                     <input type="hidden" name="_captcha" value="false">
                     <div class="row">
