--- a/page2.html
+++ b/page2.html
@@ -69,21 +69,24 @@
 <!-- fin del codigo del header -->
 
 <!-- seccion hero principal -->
-<section data-bs-version="5.1" class="header18 cid-uOLPjbvXA7 mbr-fullscreen" data-bg-video="https://www.youtube.com/embed/sQ22pm-xvrE?autoplay=1&amp;loop=1&amp;playlist=sQ22pm-xvrE&amp;t=20&amp;mute=1&amp;playsinline=1&amp;controls=0&amp;showinfo=0&amp;autohide=1&amp;allowfullscreen=true&amp;mode=transparent" id="hero-15-uOLPjbvXA7">
-  
-
-  <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
-  <div class="container-fluid">
+<section data-bs-version="5.1" class="header18 cid-uOLPjbvXA7 mbr-fullscreen" id="hero-15-uOLPjbvXA7" style="position: relative; overflow: hidden;">
+  <!-- Video de fondo -->
+  <video autoplay loop muted playsinline style="position: absolute; top: 0; left: 0; min-width: 100%; min-height: 100%; object-fit: cover; z-index: 0;">
+    <source src="assets/images/video/invideo-ai-1080 Web Developer Portfolio Explainer 2025-07-03.mp4" type="video/mp4">
+    Tu navegador no soporta el video.
+  </video>
+  <!-- Overlay -->
+  <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0); position: absolute; top:0; left:0; width:100%; height:100%; z-index:1;"></div>
+  <!-- Contenido -->
+  <div class="container-fluid" style="position: relative; z-index: 2;">
     <div class="row">
       <div class="content-wrap col-12 col-md-12">
         <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-4 display-1">
           <strong>Miguel Banguero</strong>
         </h1>
-        
-        <!-- <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">Desarrollo web impulsado por IA para experiencias digitales únicas.</p> -->
-        <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">¡Hablemos! Te ofrezco una consulta gratuita para resolver cualquier duda sobre tu sitio web.
-
-</p>
+        <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">
+          ¡Hablemos! Te ofrezco una consulta gratuita para resolver cualquier duda sobre tu sitio web.
+        </p>
         <div class="mbr-section-btn">
           <a class="btn btn-white-outline display-7" href="page2.html#contact-form-3-uOLPjbIOP5">Hablemos</a>
         </div>
