--- a/page2.html
+++ b/page2.html
@@ -85,10 +85,10 @@
           <strong>Miguel Banguero</strong>
         </h1>
         <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">
-          ¡Hablemos! Te ofrezco una consulta gratuita para resolver cualquier duda sobre tu sitio web.
+           Desarrollo y Mantenimiento de Páginas Web a Medida Con Código Limpio.
         </p>
         <div class="mbr-section-btn">
-          <a class="btn btn-white-outline display-7" href="page2.html#contact-form-3-uOLPjbIOP5">Hablemos</a>
+          <a class="btn btn-white-outline display-7" href="page2.html#contact-form-3-uOLPjbIOP5">Solicita Tú Código De Descuento</a>
         </div>
       </div>
     </div>
