--- a/page2.html
+++ b/page2.html
@@ -88,7 +88,7 @@
            Desarrollo y Mantenimiento de Páginas Web a Medida Con Código Limpio.
         </p>
         <div class="mbr-section-btn">
-          <a class="btn btn-white-outline display-7" href="page2.html#contact-form-3-uOLPjbIOP5">Solicita Tú Código De Descuento</a>
+          <a class="btn btn-white-outline display-7" href="page2.html#contact-form-3-uOLPjbIOP5">Contactar</a>
         </div>
       </div>
     </div>
@@ -116,7 +116,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style mb-4 display-2">
                   <strong>El Mago Digital</strong>
                 </h1>
-                <p class="mbr-text mbr-fonts-style mb-3 display-7">Soy Miguel Banguero, y no, no soy un mago de verdad, aunque a veces lo parezca. Mi pasión es transformar ideas en experiencias web que no solo funcionan, sino que también deslumbran. Olvídate de las páginas aburridas y prepárate para algo espectacular.</p>
+                <p class="mbr-text mbr-fonts-style mb-3 display-7">Soy Miguel Banguero, no soy un mago de verdad, aunque a veces lo parezca. Mi pasión es transformar ideas en experiencias web que no solo funcionan, sino que también deslumbran. Olvídate de las páginas aburridas y prepárate para algo espectacular.</p>
                 <p class="mbr-text mbr-fonts-style mb-3 display-7">Soy un desarrollador entusiasta recién graduado, con experiencia en prácticas profesionales y en la realización de proyectos para clientes que necesitaban soluciones tecnológicas. Me apasiona seguir aprendiendo y perfeccionando mis habilidades para crecer profesionalmente y aportar valor en cada proyecto.</p>
                 <p class="mbr-text mbr-fonts-style display-7">Mi portafolio es un reflejo de mi compromiso con la innovación y el diseño responsive. Cada proyecto es una aventura, y cada línea de código es una oportunidad para superar los límites de lo posible. ¿Estás listo para llevar tu presencia en línea al siguiente nivel? ¡Yo sí!</p>
                 
