--- a/page2.html
+++ b/page2.html
@@ -116,8 +116,8 @@
                 <h1 class="mbr-section-title mbr-fonts-style mb-4 display-2">
                   <strong>El Mago Digital</strong>
                 </h1>
-                <p class="mbr-text mbr-fonts-style mb-3 display-7">Soy Miguel Banguero, no soy un mago de verdad, aunque a veces lo parezca. Mi pasión es transformar ideas en experiencias web que no solo funcionan, sino que también deslumbran. Olvídate de las páginas aburridas y prepárate para algo espectacular.</p>
-                <p class="mbr-text mbr-fonts-style mb-3 display-7">Soy un desarrollador entusiasta recién graduado, con experiencia en prácticas profesionales y en la realización de proyectos para clientes que necesitaban soluciones tecnológicas. Me apasiona seguir aprendiendo y perfeccionando mis habilidades para crecer profesionalmente y aportar valor en cada proyecto.</p>
+                <p class="mbr-text mbr-fonts-style mb-3 display-7">Buscas soluciones tecnológicas e innovadoras que mejoren y destaquen tu proyecto?</p>
+                <p class="mbr-text mbr-fonts-style mb-3 display-7">Te ayudo a transformar  codigo en ideas atractivas que funcionan.</p>
                 <p class="mbr-text mbr-fonts-style display-7">Mi portafolio es un reflejo de mi compromiso con la innovación y el diseño responsive. Cada proyecto es una aventura, y cada línea de código es una oportunidad para superar los límites de lo posible. ¿Estás listo para llevar tu presencia en línea al siguiente nivel? ¡Yo sí!</p>
                 
               </div>
